--- a/index.html
+++ b/index.html
@@ -5,7 +5,21 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Practical Guide to Vibe Coding</title>
-    <meta name="description" content="A non-technical person's playbook for building software with AI" />
+    <meta name="description" content="A playbook for building software with AI" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://vibe-coding-guide.posterus.ventures" />
+    <meta property="og:title" content="The Practical Guide to Vibe Coding" />
+    <meta property="og:description" content="A playbook for building software with AI" />
+    <meta property="og:image" content="https://posterus.ventures/logo/logo.svg" />
+    <meta property="og:site_name" content="The Practical Guide to Vibe Coding" />
+    <meta property="og:locale" content="en_US" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@yoursite" />
+    <meta name="twitter:creator" content="@yourname" />
+    <meta name="twitter:title" content="The Practical Guide to Vibe Coding" />
+    <meta name="twitter:description" content="A playbook for building software with AI" />
+    <meta name="twitter:image" content="https://posterus.ventures/logo/logo.svg" />
   </head>
   <body>
     <div id="root"></div>
