feat: add monitoring

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
     <meta name="twitter:title" content="The Practical Guide to Vibe Coding" />
     <meta name="twitter:description" content="A playbook for building software with AI" />
     <meta name="twitter:image" content="https://posterus.ventures/logo/logo.svg" />
+    <!-- https://vibesmonitor.com script -->
+    <script
+      id="vibesmonitor-script"
+      data-project-id="0412f328-9cf9-43f0-ae97-8741661a57a7"
+      src="https://vibesmonitor.com/script/v1/vibesmonitor.js"
+      type="text/javascript"
+      defer
+    ></script>
   </head>
   <body>
     <div id="root"></div>
